Created a last dimentional table and a fact table in the warehouse layer

--- a/postgresModelling/dbt_project.yml
+++ b/postgresModelling/dbt_project.yml
@@ -37,3 +37,9 @@ models:
       +enabled: true
       +materialized: table
       +schema: stg_SBA
+    warehouse:
+      +enabled: true
+      +materialized: table
+      +schema: dwh_SBA
+      date:
+        +materialized: view
