Added One BiG Table Overview for reporting

--- a/postgresModelling/dbt_project.yml
+++ b/postgresModelling/dbt_project.yml
@@ -43,3 +43,7 @@ models:
       +schema: dwh_SBA
       date:
         +materialized: view
+    obt:
+      +enabled: true
+      +materialized: table
+      +schema: obt
